--- a/tracking-system-utah.html
+++ b/tracking-system-utah.html
@@ -76,13 +76,13 @@
     <!-- Banner Section -->
 
     <div class="banner-section">
-        <img src="assets/images/banner/banne_businesslisting.jpg" alt="" width="100%">
+        <img src="assets/images/banner/banner_tracking.jpg" alt="" width="100%">
         
             <div class="banner-content text-start py-5 my-5">
             <div class="container">
-                <h1>WE COMMUNICATE YOUR BUSINESS</h1>
-                <h1>IN THE SMARTEST WAY POSSIBLE WITH</h1>
-                <h1>OUR BUSINESS LISTING SOLUTIONS</h1>
+                <h1>WE PROVIDE REAL-TIME TRACKING</h1>
+                <h1>FROM ANYWHERE WITH OUR SMART</h1>
+                <h1>AND SEAMLESS TRACKING SOLUTIONS</h1>
                 <a href="#" type="button" class="btn btn-outline-light mt-4 px-4 rounded-pill fw-medium text-uppercase d-lg-inline-block d-none">Start Discussion</a>
             </div>
         </div>
@@ -90,14 +90,15 @@
 
     <!-- End Of Banner Section -->
 
+
     <!-- Business Intelligency Solutions -->
 
     <section class="lod-content my-4">
         <div class="container">
             <div class="row">
                 <div class="title-content">
-                    <h1>Catalogue Your Business Intelligently Through Our Business Listing Strategies</h1>
-                    <p class="mt-3">Quality business listing requires all business details to be appropriately communicated to the customer. Every business needs a software that is capable of portraying the entire business in a crisp and smart way. We provide the right software for business listing websites and mobile apps.</p>
+                    <h1>Seamless Tracking System</h1>
+                    <p class="mt-3">To be safe on roads and reach destinations faster, the current transportation system needs an advanced GPS tracking system. With such tracking systems, we don’t need to worry much since we can keep tracking our near and dear ones as they are traveling. Our tracking solution provides real-time tracking of vehicles, people and many more. The tracking system identifies the right locations using techniques like geo-fencing, Points of Interest (POI), etc. The User gets notifications time to time and can also access the tracking history.</p>
                 </div>
             </div>
         </div>
@@ -110,37 +111,47 @@
 
     <section class="tele-sol">
         <div class="container">
-            <h2 class="text-start text-capitalize position-relative d-inline-block decoration-line">Who Can Benefit From Our Solution?</h2>
+            <h2 class="text-start text-capitalize position-relative d-inline-block decoration-line">How Our Tracking System Helps</h2>
             <div class="row my-4">
-                <div class="col-lg-4 col-md-12 col-12">
+                <div class="col-lg-3 col-md-12 col-12">
                     <div class="tele-sol-item my-4 text-center">
-                        <img src="assets/icons/business-units.png" alt="">
-                        <h3>Business Units</h3>
-                        <p>Business units need to be exposed to more and more customers to earn profits and make the businesses grow. Through our solutions, we ensure noteworthy visibility of business details to the customers and assist in considerable expansion of the business.</p>
+                        <img src="assets/icons/Real-time_tracking2.png" alt="">
+                        <h3>Real-Time Tracking</h3>
+                        <p>Our solution helps to track large and small items, and also manage data effectively.</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-12 col-12">
+                <div class="col-lg-3 col-md-12 col-12">
                     <div class="tele-sol-item my-4 text-center">
-                        <img src="assets/icons/potential_customer.png" alt="">
-                        <h3>Potential Customers</h3>
-                        <p>We make sure that business listing websites are customer-centric so that the customer can seamlessly find out the required products or services.</p>
+                        <img src="assets/icons/Better_Communication.png" alt="">
+                        <h3>Better Communication</h3>
+                        <p>Our tracking application enables effective communication with the connected people in the vehicles</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-12 col-12">
+                <div class="col-lg-3 col-md-12 col-12">
                     <div class="tele-sol-item my-4 text-center">
-                        <img src="assets/icons/significant-business-visibility.png" alt="">
-                        <h3>We Ensure Significant Business Visibility</h3>
-                        <p>Our solution provides numerous options to strikingly put forward businesses in front of the customer with the most spectacular web designs.</p>
+                        <img src="assets/icons/Staying_Constantly_Updated.png" alt="">
+                        <h3>Staying Constantly Updated</h3>
+                        <p>The location information gets updated every few minutes.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-12 col-12">
+                    <div class="tele-sol-item my-4 text-center">
+                        <img src="assets/icons/Reduced_Transport_Thefts.png" alt="">
+                        <h3>The GPS tracking system</h3>
+                        <p>The GPS tracking system can be used to track our cars as well as our assets like luggage, wallet, jewellery, etc. within the car. The location information gets updated every few minutes.</p>
                     </div>
                 </div>
                 <div class="col-12">
                     <ul class="benefits-list my-1">
-                        <li>We help your business listing website to be a major attention grabber for your business.</li>
-                        <li>There are multiple templates to choose from.</li>
-                        <li>There are attractive and professional fonts and paragraph styles.</li>
-                        <li> Websites come with soothing and striking color combinations.</li>
-                        <li>Businesses can be illustrated with pictures, animations, photographs and videos.</li>
-                        <li> Through business listing, we help to develop the brand image.</li>
+                        <li>Every movement, change of direction and halt of the car can be tracked using the GPS Tracking System</li>
+                        <li>Activities of kids can be tracked through mobile apps</li>
+                        <li>Companies/ individuals can effectively communicate with the remote drivers.</li>
+                        <li>Parents can constantly communicate with the child through the tracking system.</li>
+                        <li>The location information gets updated every few minutes.</li>
+                        <li>Parents can keep track of location changes of their child.</li>
+                        <li>Notification comes when the driver changes location.</li>
+                        <li>Continuous tracking prevents cars and important belongings from being stolen.</li>
+                        <li>If the vehicles are already stolen, the tracking system can also be used to track stolen vehicles.</li>
                     </ul>
                 </div>
             </div>
@@ -150,6 +161,40 @@
     <!-- End of Benefits From Solution Section -->
 
 
+    <!-- Secuirity Section -->
+
+    <section class="secuirity">
+        <div class="container">
+            <h2 class="text-start text-capitalize position-relative d-inline-block decoration-line">Ensuring High Security</h2>
+            <div class="row">
+                <div class="col-lg-6 col-md-12 col-12">
+                    <div class="tele-sol-item my-4 text-center">
+                        <img src="assets/icons/Incorporating_Blockchain.png" alt="">
+                        <h3>Incorporating Blockchain</h3>
+                        <ul class="benefits-list my-2">
+                            <li>Blockchain-based systems are most reliable and unbreakable in terms of security.</li>
+                            <li>Blockchain cryptographically secures sensitive tracking data.</li>
+                            <li>The sensitive tracking data is shielded from misuse by unauthorized users.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12 col-12">
+                    <div class="tele-sol-item my-4 text-center">
+                        <img src="assets/icons/Security_Alerts.png" alt="">
+                        <h3>Security Alerts</h3>
+                        <ul class="benefits-list my-2">
+                            <li>Parents can set up zones for getting alerts, such as the child entering and leaving the school premises.</li>
+                            <li>SOS alerts can be set up to get notified of occurance of any threat or difficulty via text, voice call or e-mail.</li>
+                            <li>Family and friends can receive safety alerts via email or text messages.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- End of High Secuirity Section -->
+
     <!-- Benefits Content Section -->
 
     <section class="benefits-content">
@@ -157,29 +202,28 @@
             <!-- <h2 class="text-start text-capitalize position-relative d-inline-block">Defining Every Business Aspect</h2> -->
             <div class="row">
                     <div class="col-lg-6 col-md-12 col-12">
-                        <h3>Defining Every Business Aspect</h3>
-                        <p>Our business listing solution can assist in building websites and mobile apps with numerous business aspects such as:</p>
+                        <h3>Flexibility ensured with our cloud-based Tracking System</h3>
                         <!-- <p>Blockchains help to provide a clearer and protected view of the transactions of individual customers.</p> -->
                         <ul class="benefits-list my-1">
-                            <li>Business Name</li>
-                            <li>Phone Number</li>
-                            <li>Office Address</li>
+                            <li>Since the data is stored in a secure cloud, the user can access data at any time from anywhere.</li>
+                            <li>We provide multi-device support through computers, mobiles and tablets.</li>
+                            <!-- <li>Office Address</li>
                             <li>Working Hours</li>
                             <li>Main website URL</li>
                             <li>Various categories of Services</li>
-                            <li>Privileges listing, etc.</li>
+                            <li>Privileges listing, etc.</li> -->
                         </ul>
                     </div>
                     <div class="col-lg-6 col-md-12 col-12">
-                        <h3>The Backend Client</h3>
-                        <p>The client at the backend can add business details to the websites as per the requirements. There is so much that the backend client can perform:</p>
+                        <h3>Save Your Money with our Tracking System</h3>
+                        <p>GPS Tracking serves as an economical way of managing the transport system.</p>
                         <ul class="benefits-list my-1">
-                            <li>See all the list of businesses</li>
-                            <li>Manage businesses</li>
-                            <li>Add, Edit, Block them</li>
+                            <li>Our tracking solution helps to find the best routes, often the shortest ones, for your vehicles. This saves time and money.</li>
+                            <li>With our vehicle tracking system, there will be no vehicle standing idle in any location. The company can easily track the idle vehicle and assign favorable trips to the vehicle. With all vehicles active, the company can earn maximum profits.</li>
+                            <!-- <li>Add, Edit, Block them</li>
                             <li>Send bulk messages to all of them</li>
                             <li>Manage subscription</li>
-                            <li>Check payments received from businesses through subscription, etc.</li>
+                            <li>Check payments received from businesses through subscription, etc.</li> -->
                         </ul>
                     </div>
                 </div>
@@ -187,6 +231,12 @@
     </section>
 
     <!-- End Of Benefits Content Section -->
+
+
+
+
+
+
 
 
     <!-- Footer Section -->
