--- a/tracking-system-utah.html
+++ b/tracking-system-utah.html
@@ -166,15 +166,15 @@
     <section class="secuirity">
         <div class="container">
             <h2 class="text-start text-capitalize position-relative d-inline-block decoration-line">Ensuring High Security</h2>
-            <div class="row">
+            <div class="row my-4">
                 <div class="col-lg-6 col-md-12 col-12">
                     <div class="tele-sol-item my-4 text-center">
                         <img src="assets/icons/Incorporating_Blockchain.png" alt="">
                         <h3>Incorporating Blockchain</h3>
                         <ul class="benefits-list my-2">
-                            <li>Blockchain-based systems are most reliable and unbreakable in terms of security.</li>
-                            <li>Blockchain cryptographically secures sensitive tracking data.</li>
-                            <li>The sensitive tracking data is shielded from misuse by unauthorized users.</li>
+                            <p>Blockchain-based systems are most repable and unbreakable in terms of security.</p>
+                            <p>Blockchain cryptographically secures sensitive tracking data.</p>
+                            <p>The sensitive tracking data is shielded from misuse by unauthorized users.</p>
                         </ul>
                     </div>
                 </div>
@@ -183,9 +183,9 @@
                         <img src="assets/icons/Security_Alerts.png" alt="">
                         <h3>Security Alerts</h3>
                         <ul class="benefits-list my-2">
-                            <li>Parents can set up zones for getting alerts, such as the child entering and leaving the school premises.</li>
-                            <li>SOS alerts can be set up to get notified of occurance of any threat or difficulty via text, voice call or e-mail.</li>
-                            <li>Family and friends can receive safety alerts via email or text messages.</li>
+                            <p>Parents can set up zones for getting alerts, such as the child entering and leaving the school premises.</p>
+                            <p>SOS alerts can be set up to get notified of occurance of any threat or difficulty via text, voice call or e-mail.</p>
+                            <p>Family and friends can receive safety alerts via email or text messages.</p>
                         </ul>
                     </div>
                 </div>
@@ -232,12 +232,20 @@
 
     <!-- End Of Benefits Content Section -->
 
-
-
-
-
-
-
+    <div class="section py-4">
+        <div class="container">
+          <div class="">
+            <div class="row">
+              <div class="col-lg-2 col-12 text-center">
+                <img src="assets/icons/support.png">
+              </div>
+              <div class="col-lg-10 col-12 text-start">
+                <h3>You can raise a query at any time from anywhere. Our cordial and cooperative customer care personnel will be at your service through 24/7 online chat.</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
     <!-- Footer Section -->
 
