--- a/tracking-system-utah.html
+++ b/tracking-system-utah.html
@@ -141,7 +141,7 @@
                         <p>The GPS tracking system can be used to track our cars as well as our assets like luggage, wallet, jewellery, etc. within the car. The location information gets updated every few minutes.</p>
                     </div>
                 </div>
-                <div class="col-12">
+                <!-- <div class="col-12">
                     <ul class="benefits-list my-1">
                         <li>Every movement, change of direction and halt of the car can be tracked using the GPS Tracking System</li>
                         <li>Activities of kids can be tracked through mobile apps</li>
@@ -153,7 +153,7 @@
                         <li>Continuous tracking prevents cars and important belongings from being stolen.</li>
                         <li>If the vehicles are already stolen, the tracking system can also be used to track stolen vehicles.</li>
                     </ul>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
