--- a/app-developers-utah.html
+++ b/app-developers-utah.html
@@ -83,7 +83,7 @@
             <div class="container">
                 <h1>WE CREATE THE BEST APPS FOR YOUR</h1>
                 <h1>BUSINESS WITH OUR ADVANCED APP</h1>
-                <h1>DEVELOPMENT SOLUTIONS COUPLED WITH MOBILITY</h1>
+                <h1>DEVELOPMENT SOLUTIONS COUPLED <br>WITH MOBILITY</h1>
                 <a href="#" type="button" class="btn btn-outline-light mt-4 px-4 rounded-pill fw-medium text-uppercase d-lg-inline-block d-none">Start Discussion</a>
             </div>
         </div>
