--- a/dating-solution-utah.html
+++ b/dating-solution-utah.html
@@ -53,13 +53,13 @@
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Technology</a>
                 <ul class="dropdown-menu">
-                  <li><a href="#">Software Product Development</a></li>
-                 <li><a href="#">Machine Learning</a></li>
-                 <li><a href="#">Blockchain</a></li>
-                 <li><a href="#">Mobile application</a></li>
-                 <li><a href="#">Cloud server architecture</a></li>
-                 <li><a href="#">Front end UI</a></li>
-                </ul>
+                    <li><a href="software-development-utah.html">Software Product Development</a></li>
+                    <li><a href="machine-learning-utah.html">Machine Learning</a></li>
+                    <li><a href="blockchain-utah.html">Blockchain</a></li>
+                    <li><a href="mobile-application-utah.html">Mobile application</a></li>
+                    <li><a href="cloud-solutions-utah.html">Cloud server architecture</a></li>
+                    <li><a href="fontend-UI-utah.html">Front end UI</a></li>
+                 </ul>
               </li>
 
               <li>
