--- a/software-development-utah.html
+++ b/software-development-utah.html
@@ -77,13 +77,14 @@
     <!-- Banner Section -->
 
     <div class="banner-section">
-        <img src="assets/images/banner/banner_logistics.jpg" alt="" width="100%">
+        <img src="assets/images/banner/banner_softproductdevelopment.jpg" alt="" width="100%">
         
-            <div class="banner-content text-start py-5 my-5">
+            <div class="banner-content text-end py-5 my-5">
             <div class="container">
-                <h1>WE PROVIDE THE BEST LOGISTICS</h1>
-                <h1>SOLUTIONS FOR VENDORS,</h1>
-                <h1>CUSTOMERS AND DELIVERY</h1>
+                <h1>WE EFFICIENTLY USE JAVA,</h1>
+                <h1>SWIFT AND FLAT FILE DATABASES.</h1>
+                <h1>EXPLORE OUR TECHNOLOGY!</h1>
+                <!-- <h1>MOBILE SOLUTIONS FOR YOU</h1> -->
                 <a href="#" type="button" class="btn btn-outline-light mt-4 px-4 rounded-pill fw-medium text-uppercase d-lg-inline-block d-none">Start Discussion</a>
             </div>
         </div>
@@ -92,111 +93,72 @@
     <!-- End Of Banner Section -->
 
 
-    <!-- Logistics & Delivery Solutions -->
+    <!-- Business Intelligency Solutions -->
 
     <section class="lod-content my-4">
         <div class="container">
             <div class="row">
                 <div class="title-content">
-                    <h1>Logistics And Delivery</h1>
-                    <p>Supplying and Dispatching Orders in the Most Optimized Way</p>
-                    <p class="mt-2">Appsbee has a logistics ecosystem that seamlessly provides the best delivery solutions to shops, drivers and end customers.</p>
-                    <h3>The Need for a Modernized Logistics Industry</h3>
-                    <p>Digitalization has paved way for increased purchases and transactions online, resulting in the rapid growth of the online e-commerce industry. It is high time that we need a technically enhanced and highly optimized logistics system to ensure smart tracking of products and speedy delivery. Technology has reached a stage where we think of automated drones and self-driven cars delivering products at the customer’s doorstep using technologies like Artificial Intelligence.</p>
+                    <h1>We Use Up-To-Date Technology To Develop High-End Products</h1>
+                    <p class="mt-2">A business thrives on the successful implementation of its product in the market place. Product development plays an indispensable role for the product to be successfully launched within the market. We have experienced developers who aim at creating the best products for your business by utilizing the most updated technology.</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- End of Logistics & Delivery Solutions -->
+    <!-- End of Business Intelligency Solutions -->
 
-        <!-- Telehealth Solutions -->
 
-        <section class="tele-sol">
-            <div class="container">
-                <h2 class="text-start text-capitalize position-relative d-inline-block decoration-line">How Do We Ensure Smooth And Hassle-Free Delivery Of Products?</h2>
-                <div class="row my-4">
-                    <div class="col-lg-4 col-md-12 col-12">
-                        <div class="tele-sol-item my-4 text-center">
-                            <img src="assets/icons/Zone_Divisions.png" alt="">
-                            <h3>Zone Divisions</h3>
-                            <p>The state is divided into different zones. We have set exclusive routes for delivery in each zone. This helps to avoid confusion when there are a large number of orders.</p>
-                        </div>
+    <!-- Benefits From Solution Section -->
+
+    <section class="tele-sol my-5">
+        <div class="container">
+            <h2 class="text-start text-capitalize position-relative d-inline-block decoration-line">The Databases We Use</h2>
+            <div class="row my-5">
+                <div class="col-lg-6 col-md-12 col-12">
+                    <div class="tele-sol-item my-4 text-center">
+                        <img src="assets/icons/Vulnerability-Assessment-through-Penetration-Testing.png" alt="">
+                        <h3>Vulnerability Assessment through Penetration Testing</h3>
+                        <p>We identify what is vulnerable and prone to malpractices in your business and ensure high security of those vulnerable areas. We detect those vulnerabilities with penetration testing.</p>
                     </div>
-                    <div class="col-lg-4 col-md-12 col-12">
-                        <div class="tele-sol-item my-4 text-center">
-                            <img src="assets/icons/Instant_Notifications.png" alt="">
-                            <h3>Instant Notifications</h3>
-                            <p>Whenever an order gets placed, both the seller and the buyer get notified in their devices. The customer gets constant updates through notifications like when the order is dispatched, when the order is shipped,etc.</p>
-                        </div>
+                </div>
+                <div class="col-lg-6 col-md-12 col-12">
+                    <div class="tele-sol-item my-4 text-center">
+                        <img src="assets/icons/Socia_Engineering_Test.png" alt="">
+                        <h3>Social Engineering Test</h3>
+                        <p>Examining employees’ commitment and making them aware of security policies is what we do through the social engineering test. Employees should not get manipulated by malicious sources and leak confidential information.</p>
                     </div>
-                    <div class="col-lg-4 col-md-12 col-12">
-                        <div class="tele-sol-item my-4 text-center">
-                            <img src="assets/icons/Real-time_tracking.png" alt="">
-                            <h3>Delivery Systems through Geo-fencing</h3>
-                            <p>GPS and Geo-fencing help to find the most appropriate delivery systems nearby using geofending.</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-12 col-12">
-                        <div class="tele-sol-item my-4 text-center">
-                            <img src="assets/icons/Real-time_tracking.png" alt="">
-                            <h3>Real-time tracking</h3>
-                            <p>Our solutions help to track large and small items, and also manage data effectively.</p>
-                            <!-- <p>The user can track the product at anytime between placing the order and actual delivery using the GPS Tracking System</p>
-                            <p>The driver also gets real-time notifications every now and then about the customer, such as how far the customer’s home is from the driver’s location</p> -->
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-12 col-12">
-                        <div class="tele-sol-item my-4 text-center">
-                            <img src="assets/icons/Instant_Delivery.png" alt="">
-                            <h3>Instant Delivery</h3>
-                            <p>Delivery of products as soon as possible</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-12 col-12">
-                        <div class="tele-sol-item my-4 text-center">
-                            <img src="assets/icons/Scheduled_Delivery.png" alt="">
-                            <h3>Scheduled Delivery</h3>
-                            <p>Delivery of products on a scheduled date and time</p>
-                        </div>
+                </div>
+                <div class="col-lg-6 col-md-12 col-12">
+                    <div class="tele-sol-item my-4 text-center">
+                        <img src="assets/icons/Compliance_Assessment.png" alt="">
+                        <h3>Compliance Assessment</h3>
+                        <p>We identify various factors of business like employee actions,business activities, position, size, etc., and make sure they are complaint with company’s security policies. The product being developed should comply with the specified requirements, including the security requirement. Compliance assessment helps to identify areas of potential risks.</p>
                     </div>
                 </div>
             </div>
-        </section>
-    
-        <!-- End Of Telehealth Solutions -->
+        </div>
+    </section>
 
-        <!-- Benefits Content Section -->
+    <!-- End of Benefits From Solution Section -->
 
-        <section class="benefits-content">
-            <div class="container">
-                <div class="row">
-                        <div class="col-lg-6 col-md-12 col-12">
-                            <h3>Data Secured Using Blockchain</h3>
-                            <p>Blockchains help to provide a clearer and protected view of the transactions of individual customers.</p>
-                            <ul class="benefits-list my-1">
-                                <li>Breaks the system into nodes, thus cryptographically securing transactions and sensitive tracking data</li>
-                                <li>Reduces risks of data getting tampered or shipments getting delayed</li>
-                                <li>Reduces cost and time of shipment</li>
-                                <li>With Blockchain, shops and selling units can systematically and safely maintain data of a large number of customers</li>
-                                <li>The information of every end user is perfectly shielded</li>
-                            </ul>
-                        </div>
-                        <div class="col-lg-6 col-md-12 col-12">
-                            <h3>Make Your Team Lunches Memorable with Us</h3>
-                            <p>We assist in providing the best catering services for events and business meetings. Working professionals and event organizations can opt for scheduled delivery to get the best meals delivered in the right place at the right hour.</p>
-                            <ul class="benefits-list my-1">
-                                <li>The customers can select their nosh-up from any of the listed local restaurants</li>
-                                <li>The customers can select the time and date of delivery</li>
-                                <li>The customers can track the order and get notifications from time to time</li>
-                                <li>The customer can get the order from any place within the office/ event house at the required time</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-        </section>
 
-        <!-- End Of Benefits Content Section -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <!-- Footer Section -->
 
@@ -250,8 +212,6 @@
           <img class="w-auto me-3" src="assets/images/apps_img-footer.png"> 2009 - 2023 Appsbee. All Rights Reserved.
         </div>
       </div>
-  
-  
   
       <!--  Optional JavaScript -->
       <script src="assets/js/jquery-3.6.3.min.js"></script>
